[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expression-game"
version = "0.1.0"
description = "A playful CLI that turns your local Ollama models into a creative expression game."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Kais Cheikh" }]
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.1.7",
]

[project.scripts]
expression-game = "expression_game.cli:main"

[tool.uv]
dev-dependencies = []
