[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gameS"
version = "0.1.0"
description = "A playful CLI that turns your local Ollama models into a creative games."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Kais Cheikh" }]
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.1.7",
]

[project.scripts]
riddle-game = "games.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/games"]

[tool.hatch.build.targets.sdist]
include = ["src/games", "pyproject.toml", "README.md", "LICENSE"]

[tool.uv]
dev-dependencies = [
    "ipykernel",
]
