[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gameS"
version = "0.1.0"
description = "A playful CLI that turns your local Ollama models into a creative games."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Kais Cheikh" }]
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.1.7",
    "pydantic>=2.5",
    "streamlit>=1.32.0",
]

[project.scripts]
riddle-game = "games.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/games"]

[tool.hatch.build.targets.sdist]
include = ["src/games", "pyproject.toml", "README.md", "LICENSE"]

[dependency-groups]
lint = ["ruff>=0.14.1"]

[tool.uv]
dev-dependencies = [
    "ipykernel",
    "pytest>=8.0",
    "ruff>=0.14.1",
]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
